--- a/自作その６/css/style.SCSS.css
+++ b/自作その６/css/style.SCSS.css
@@ -45,8 +45,8 @@ header img {
 header .menu-bar {
   height: 30px;
   width: 30px;
-  margin: 10px;
-  padding: 10px;
+  margin: 10px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
   position: relative;
@@ -109,7 +109,7 @@ header nav a {
 }
 
 main {
-  padding: 80px auto 160px auto;
+  padding: 80px 40px 160px 40px;
 }
 main img {
   width: 100%;
@@ -118,12 +118,14 @@ main ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 35px;
+  padding: 0;
 }
 main li {
   list-style: none;
 }
 main .view-more {
   margin-top: 80px;
+  margin-bottom: 80px;
   text-align: center;
   font-size: 0.875rem;
 }
@@ -131,7 +133,9 @@ main .view-more {
 footer {
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
+  position: relative;
+  bottom: 20px;
+  padding: 0 40px;
 }
 footer nav {
   display: flex;
