--- a/自作その６/css/style.SCSS
+++ b/自作その６/css/style.SCSS
@@ -20,10 +20,15 @@ body{
       opacity:0.7;
     }
   }
+
+  img{
+    max-width:100%;
+  }
 }
 
 header{
   padding:0 40px;
+  height:80px;
   background-color:white;
   display:flex;
   justify-content:space-between;
@@ -32,9 +37,9 @@ header{
   top:0;
   z-index:100;
   box-sizing:border-box;
-  
+
   img{
-    max-width:100%;
+    height:1.30rem;
   }
 
 
@@ -119,8 +124,10 @@ header{
     // 挙動の確認用のCSS
     display:flex;
     flex-direction:column;
-    top:30px;
-    left:30px;
+    gap:20px;
+    width:300px;
+    top:40px;
+    left:40px;
     z-index:20;
     transform:translateY(-200%);
     transition:all 0.7s ease;
@@ -134,19 +141,31 @@ header{
     }
 
   }
+
+  #nav-menu{
+    font-size:1rem;
+  }
 }
 
 main{
   
-  padding:80px 40px 160px 40px;
+  
+  padding:0 40px 80px 40px;
+
+  h3{
+    font-weight:normal;
+    margin:0 0 30px 0;
+    font-size:0.875rem;
+  }
+
   img{
-    width:100%;
+    margin-bottom:5px;
   }
   ul{
     display:grid;
     grid-template-columns:repeat(4,1fr);
     gap:35px;
-    padding:0;
+    @include space-setting(0,0);
   }
 
   li{
@@ -154,10 +173,16 @@ main{
   }
 
   .view-more{
-    margin-top:80px;
-    margin-bottom:80px;
+    margin:40px 0 40px 0;
     text-align:center;
     font-size:0.875rem;
+  }
+
+  .page-view-1{
+    display:flex;
+    justify-content:center;
+    gap:20px;
+    margin:40px 0 40px 0;
   }
 }
 
@@ -171,11 +196,30 @@ footer{
 
   nav{
     display:flex;
-    gap:20px;
+    gap:30px;
+    margin-bottom:5px;
+    
+    a{
+      font-size:0.75rem;
+    }
   }
 
   p{
     font-size:0.625rem;
 
+  }
+}
+
+@media screen and(max-width:1000px){
+  main{
+
+    ul{
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+    }
+  }
+
+  footer{
+    display:block;
   }
 }
