--- a/自作その６/css/style.SCSS.css
+++ b/自作その６/css/style.SCSS.css
@@ -26,9 +26,13 @@ body a {
 body a:hover {
   opacity: 0.7;
 }
+body img {
+  max-width: 100%;
+}
 
 header {
   padding: 0 40px;
+  height: 80px;
   background-color: white;
   display: flex;
   justify-content: space-between;
@@ -40,7 +44,7 @@ header {
   box-sizing: border-box;
 }
 header img {
-  max-width: 100%;
+  height: 1.3rem;
 }
 header .menu-bar {
   height: 30px;
@@ -97,8 +101,10 @@ header .nav-back {
 header nav {
   display: flex;
   flex-direction: column;
-  top: 30px;
-  left: 30px;
+  gap: 20px;
+  width: 300px;
+  top: 40px;
+  left: 40px;
   z-index: 20;
   transform: translateY(-200%);
   transition: all 0.7s ease;
@@ -107,27 +113,41 @@ header nav a {
   text-decoration: none;
   color: white;
 }
+header #nav-menu {
+  font-size: 1rem;
+}
 
 main {
-  padding: 80px 40px 160px 40px;
+  padding: 0 40px 80px 40px;
+}
+main h3 {
+  font-weight: normal;
+  margin: 0 0 30px 0;
+  font-size: 0.875rem;
 }
 main img {
-  width: 100%;
+  margin-bottom: 5px;
 }
 main ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 35px;
+  margin: 0;
   padding: 0;
 }
 main li {
   list-style: none;
 }
 main .view-more {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin: 40px 0 40px 0;
   text-align: center;
   font-size: 0.875rem;
+}
+main .page-view-1 {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 40px 0 40px 0;
 }
 
 footer {
@@ -139,9 +159,23 @@ footer {
 }
 footer nav {
   display: flex;
-  gap: 20px;
+  gap: 30px;
+  margin-bottom: 5px;
+}
+footer nav a {
+  font-size: 0.75rem;
 }
 footer p {
   font-size: 0.625rem;
+}
+
+@media screen and (max-width: 1000px) {
+  main ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  footer {
+    display: block;
+  }
 }
 /*# sourceMappingURL=style.SCSS.css.map */
